# FlashLLM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashllm_gemma_2b_dpo.yaml  flashllm_llama_7b_sft.yaml  flashllm_mistral_7b_lora.yaml  flashllm_phi3_mini_chat.yaml
docker/: Dockerfile  docker-compose.yml
docs/: FAQ.md  Home.md  Installation.md  LoRA-Fine-Tuning.md  Models.md  Quantization.md  Quick-Start.md  Training.md
examples/: benchmark_model.py  chat_with_model.py  finetune_lora.py  generate_text.py  quantize_model.py
flashllm/: __init__.py  cli.py  registry.py
flashllm/analytics/: __init__.py  benchmark.py  plots.py  profiler.py
flashllm/cfg/: __init__.py  config.py
flashllm/data/: __init__.py  dataloader.py  dataset.py  templates.py  tokenizer.py
flashllm/engine/: __init__.py  callbacks.py  exporter.py  predictor.py  trainer.py  validator.py
flashllm/eval/: __init__.py  harness.py
flashllm/export/: __init__.py  gguf.py
flashllm/generation/: __init__.py  beam_search.py  function_calling.py  kv_cache.py  sampler.py  streaming.py  structured_output.py
flashllm/losses/: __init__.py  cross_entropy.py  dpo_loss.py
flashllm/models/: __init__.py  flash_llm.py  lora.py  moe.py  rope_scaling.py
flashllm/models/adapters/: __init__.py  hf_adapter.py
flashllm/models/architecture/: __init__.py  attention.py  embeddings.py  transformer.py
flashllm/models/heads/: __init__.py  lm_head.py
flashllm/nn/: __init__.py
flashllm/quantization/: __init__.py  awq.py  bitsandbytes.py  exl2.py  gptq.py  hqq.py
flashllm/serving/: __init__.py  continuous_batching.py  prefix_cache.py  speculative_decoding.py  vllm_engine.py
flashllm/solutions/: __init__.py  chatbot.py  code_assistant.py  rag.py  summarizer.py
flashllm/training/: __init__.py  distributed.py  dpo.py  galore.py  rlhf.py  sft.py
flashllm/utils/: __init__.py  checkpoint.py  logger.py  metrics.py  model_utils.py
tests/: test_comprehensive.py  test_generation.py  test_models.py  test_new_components.py  test_registry.py  test_serving.py
